--- a/css/styles.css
+++ b/css/styles.css
@@ -257,7 +257,7 @@
 }
 
 .imagen--container {
-    background-image: url('assets/img/bitcoinbaby.png');
+    background-image: url(assets/img/bitcoinbaby.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
