--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@
     font-weight: 700;
     text-align: center;
     padding-top: 40px;
+    margin: 0 10px;
     color: var(--title);
 }
 
@@ -103,6 +104,7 @@
     text-align: center;
     color: var(--text-main);
     padding-top: 24px;
+    margin: 0 10px;
 }
 
 .exchange__table {
