--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,7 @@
     padding-top: 64px;
 }
 
-.choose--container{
+.plans-container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -282,11 +282,12 @@
     background-color: var(--bg-grey);
 }
 
-.choose__title {
+
+.plans__title {
     margin: 0 17px 0 15px;
 }
 
-.choose__title h2 {
+.plans__title h2 {
     font-size: 2.4rem;
     line-height: 2.6rem;
     text-align: center;
@@ -295,7 +296,7 @@
     margin-bottom: 24px;
 }
 
-.choose__title p {
+.plans__title p {
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 1.8rem;
@@ -304,46 +305,59 @@
     margin-bottom: 50px;
 }
 
-.selling__block {
+.plans-container__slider {
     display: flex;
+    width: 316px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
+
+.plans-container__card {
     position: relative;
-    flex-direction: column;
-    align-items: center;
-    width: 190px;
+    scroll-snap-align: center;
+    width: 70%;
+    min-width: 190px;
+    max-width: 230px;
     height: 247px;
+    margin: 50px 35px 0;
+    padding: 0 15px;
     background-color: var(--white);
     box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
     border-radius: 8px;
     margin-bottom: 64px;
 }
 
-.selling__block .recommen {
+.recommended {
     display: flex;
     position: absolute;
     font-size: 1.2rem;
     line-height: 1,5rem;
     font-weight: 700;
-    top: -15px;
+    top: -16px;
+    left: 44px;
     border-radius: 8px;
     background-color: var(--orange-bg);
     color: var(--white);
     padding: 8px;
 }
 
-.selling__block h3 {
+.info__title {
     font-size: 1.4rem;
     line-height: 1.8rem;
-    font-weight: 500;
+    font-weight: 700;
     margin-bottom: 8px;
     margin-top: 31px;
+    text-align: center;
 }
 
-.selling__block .block__price {
+.info__price {
     display: flex;
+    justify-content: center;
     margin-right: 15px;
 }
 
-.block__price p {
+.info__price span {
     display: flex;
     align-self: center;
     margin-bottom: 32px;
@@ -354,7 +368,7 @@
     color: #363636;
 }
 
-.block__price span {
+.info__price p {
     font-size: 5.2rem;
     font-family: var(--font-sec);
     line-height: 6.2rem;
@@ -362,7 +376,7 @@
     font-weight: 700;
 }
 
-.selling__block .block__text {
+.info__saving {
     text-align: center;
     font-size: 1.2rem;
     line-height: 1.5rem;
@@ -371,32 +385,32 @@
     color: var(--text-main);
 }
 
-.selling__block .button {
+.info__card {
     display: flex;
+    min-width: 151px;
+    height: 48px;
     align-items: center;
     justify-content: center;
     text-align: center;
     border: var(--border-orange);
     border-radius: 4px;
     background-color: #FAF8F7;
-}
-
-.button p {
-    align-self: center;
     padding: 15px;
     padding-right: 5px; 
     font-size: 1.4rem;
     line-height: 1.8rem;
     font-weight: 700;
+    margin: 0 auto;
 }
 
-.button span {
+.info__card span {
     margin-right: 12px;
     margin-top: 5px;
 }
 
 .footer {
     display: flex;
+    position: sticky;
     align-items: center;
     justify-content: space-around;
     min-width: 320px;
